tests/ui/cilk/liveness/error_when_value_returned_from_spawned_block.stderr
error[E0381]: used binding `y` is possibly-uninitialized
  --> $DIR/error_when_value_returned_from_spawned_block.rs:7:9
   |
LL |         let y = cilk_spawn { 1 };
   |             -              ----- binding initialized here in some conditions
   |             |
   |             binding declared here but left uninitialized
LL |         y
   |         ^ `y` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
